@@ -71,34 +71,61 @@ NODE node00736
 NODE node00739
 	POSITION 821 181
 
+NODE bignode2
+	AICONFILLCOLOR none
+	ICON 64 300 box
+	POSITION bignode 383 -6
+
 
 # regular LINKs:
 LINK node00721-bignode
-	NODES node00721:SW85 bignode:NE85
+	NODES node00721:0:0 bignode:0:0
+	SET _tidied 1
 
 LINK bignode-node00723
 	NODES bignode:32:205 node00723:-24:0
+	SET _tidied 1
 
 LINK bignode-node00725
-	NODES bignode:NW85 node00725:SE85
+	NODES bignode:-32:-222 node00725:24:0
+	SET _tidied 1
 
 LINK node00727-bignode
-	NODES node00727:NW85 bignode:SE85
+	NODES node00727:0:0 bignode:0:0
+	SET _tidied 1
 
 LINK bignode-node00729
 	NODES bignode:-32:-110 node00729:24:0
+	SET _tidied 1
 
 LINK node00734-bignode
 	NODES node00734:24:0 bignode:-32:27
+	SET _tidied 1
 
 LINK node00732-bignode
-	NODES node00732:NW85 bignode:SE85
+	NODES node00732:0:0 bignode:0:0
+	SET _tidied 1
 
 LINK node00736-bignode
 	NODES node00736:24:0 bignode:-32:162
+	SET _tidied 1
 
 LINK node00739-bignode
 	NODES node00739:-24:0 bignode:32:-209
+	VIA 718 67
+	SET _tidied 1
+
+LINK bignode-bignode2
+	NODES bignode:32:-81 bignode2:-32:-75
+	SET _tidied 1
+
+LINK bignode-bignode2a
+	NODES bignode:32:-6 bignode2:-32:0
+	SET _tidied 1
+
+LINK bignode-bignode2aa
+	NODES bignode:32:69 bignode2:-32:75
+	SET _tidied 1
 
 
 
